fix(link): align icons correctly with multi-line text

--- a/src/base/card.css
+++ b/src/base/card.css
@@ -228,8 +228,6 @@ slot[name="link"]::slotted(*) {
 }
 
 slot[name="link"]::slotted(a) {
-  display: inline-flex;
-  gap: var(--sgds-gap-2-xs);
   color: var(--sgds-link-color-default);
   text-decoration: none !important;
   height: auto !important;
